2010-06-21  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* plotchart.tcl: Added creation method for target diagrams, performance profiles and 3d ribbon plots
	* plotdemos14.tcl: Added demonstration of so-called target diagram
	* plotdemos15.tcl: Added demonstration of 3d ribbons (provided by Keith Vetter)
	* plotdemos16.tcl: Added demonstration of performance profiles
	* plotchart.man: Documentation added for target diagrams, performance profiles and 3d ribbon plots
	* plotspecial.tcl: New file for methods that deal with specialised plots
	* plot3d.tcl: Added ribbon plot method (by Keith Vetter)
	* pkgIndex.tcl: Changed version Plotchart to 1.9.0

2010-06-08  Andreas Kupries  <andreask@activestate.com>

	* pkgIndex.tcl: Added a guard command to xyplot, this package
	  requires Tcl 8.5+.

2010-06-06  Arjen Markus  <arjenmarkus@users.sourceforge.net>
	* demo.tcl: Added demo program showing code and plot/chart
	* plotpriv.tcl: Moving DrawVtext to plotaxis.tcl (also checking Tk version)
	* plotpriv.tcl: Adding option to use darkening gradients
	* plotpriv.tcl: Enable "exploding" segments in a piechart
	* plotbind.tcl: Provide a procedure to explode a segment in a piechart
	* plotaxis.tcl: Adjusted formatting of axis labels - Tcl 8.5 uses a large precision,
	                leading to labels like 0.09999999 instead of 0.1
	* plotaxis.tcl: Draw labels in bar charts centred wrt the bars, not the bars and gap (suggestion by Harald Oehlmann)
	* plotaxis.tcl: Moving the legend interactively via Button-1
	* scaling.tcl: Added a new scaling procedure: determineScaleFromList
	* plotchart.tcl: Added this new scaling procedure to the exports
	* plotchart.man: Describe the new scaling procedure
	* plotchart.man: Describe the bindplot and bindlast subcommands
	* plotchart.man: Describe the new option for darkening gradients
	* plotchart.man: Describe the tags that are used (description of the current status)
	* plotchart.test: Added tests for the new scaling procedure